test/errors/resolution/incompatibleRangeBounds.chpl
var x: int = 1;
var y = "hello";
var r1 = 1.."hello";
var r2 = y..x;
var r3 = 1..int;
var r4 = int..string;
